<resources>
    <string name="app_name">Memories</string>
    <string name="title_App">Memories</string>
    <string name="messageApp">Create Your Memories Here!</string>
    <string name="login">Masuk\n</string>
    <string name="signup">Daftar</string>
    <string name="title_login">Silahkan masukkan data anda</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="title_signup">Yuk, isi datamu dulu!</string>
    <string name="name">Nama\n</string>
    <string name="logout">Keluar\n</string>
    <string name="field_error_null" translatable="false">Text harus diisi</string>
    <string name="email_error_validation" translatable="false">Email Tidak Valid</string>
    <string name="deskripsi">deskripsi</string>
    <string name="unggah_cerita">unggah cerita</string>
    <string name="galeri">galeri</string>
    <string name="unggah">unggah\n</string>
    <string name="ambil_gambar">ambil gambar</string>
    <string name="ulang">ulangi</string>
    <string name="userName">User name</string>

</resources>